# SecuritySystem2

./: .gitignore  README.md
.jxbrowser.userdata/: Local State
.jxbrowser.userdata/CertificateRevocation/9546/: crl-set  manifest.fingerprint  manifest.json
.jxbrowser.userdata/Default/: History  Network Persistent State  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
.jxbrowser.userdata/Default/DawnCache/: data_1  index
.jxbrowser.userdata/Default/Extension Scripts/: LOG
.jxbrowser.userdata/Default/Extension State/: LOG
.jxbrowser.userdata/Default/GPUCache/: data_1  index
.jxbrowser.userdata/Default/Session Storage/: LOG
.jxbrowser.userdata/Default/Sessions/: Session_13383269550183183
.jxbrowser.userdata/Default/Site Characteristics Database/: LOG
.jxbrowser.userdata/Default/shared_proto_db/: LOG
.jxbrowser.userdata/GrShaderCache/: data_0  data_1  index
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage
.jxbrowser.userdata/OnDeviceHeadSuggestModel/20250114.720352271.14/: manifest.fingerprint  manifest.json
.jxbrowser.userdata/ShaderCache/: data_1  index
MQTT/ESP32_broker/: broker.cpp  publisher.cpp
MQTT/Host_broker/: publisher.cpp  subscriber.cpp
MQTT/broker on EMQX/: pub_door.txt  publisher.txt  subscriber.txt
MQTT/broker on esp32/: master.txt  slave.txt
central/ccs/: .gitignore
central/ccs/.jxbrowser.userdata/: Local State  Module Info Cache
central/ccs/control_unit/: .cproject  .project
central/workspace/control_unit/: .cproject  .gitignore  adc.c  adc.h  (+23 more)
test/: CMakeLists.txt  test.c
(+152 files in other folders)
